--- a/install/vagrant/Vagrantfile
+++ b/install/vagrant/Vagrantfile
@@ -5,8 +5,7 @@ VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box = "ubuntu/trusty64"
-  config.vm.network "forwarded_port", guest: 80, host: 5001
-  config.vm.network "forwarded_port", guest: 8080, host: 5002
+  config.vm.network "private_network", ip: "192.168.51.122"
 
   config.vm.provider "virtualbox" do |vb|
     vb.memory = 2048
