--- a/install/vagrant/resources/supervisor/django.conf
+++ b/install/vagrant/resources/supervisor/django.conf
@@ -1,8 +1,9 @@
 [program:dwt_django]
 user = vagrant
-directory = /home/vagrant/projects/dontWasteTime/webapp/crawler_app
-command = /home/vagrant/Envs/dontWasteTime/bin/python manage.py runserver 0.0.0.0:8000
+directory = %(ENV_HOME)s/projects/dontWasteTime/webapp/crawler_app
+command = %(ENV_HOME)s/Envs/dontWasteTime/bin/python manage.py runserver 0.0.0.0:8000
 autostart = true
 autorestart = true
 stdout_logfile = /var/log/dontWasteTime/django_out.log
 stderr_logfile = /var/log/dontWasteTime/django_err.log
+environment = PATH="%(ENV_HOME)/Envs/dontWasteTime/bin:%(ENV_PATH)s"
