--- a/install/vagrant/resources/supervisor/worker.conf
+++ b/install/vagrant/resources/supervisor/worker.conf
@@ -1,8 +1,9 @@
 [program:dwt_worker]
 user = vagrant
-directory = /home/vagrant/projects/dontWasteTime/webapp/crawler_app
-command = /home/vagrant/Envs/dontWasteTime/bin/celery -A crawler_app worker -l info
+directory = %(ENV_HOME)s/projects/dontWasteTime/webapp/crawler_app
+command = %(ENV_HOME)s/Envs/dontWasteTime/bin/celery -A crawler_app worker -l info
 autostart = true
 autorestart = true
 stdout_logfile = /var/log/dontWasteTime/worker_out.log
 stderr_logfile = /var/log/dontWasteTime/worker_err.log
+environment = PATH="%(ENV_HOME)/Envs/dontWasteTime/bin:%(ENV_PATH)s"
