Fix typo in supervisor config

--- a/install/vagrant/resources/supervisor/worker.conf
+++ b/install/vagrant/resources/supervisor/worker.conf
@@ -6,4 +6,4 @@ autostart = true
 autorestart = true
 stdout_logfile = /var/log/dontWasteTime/worker_out.log
 stderr_logfile = /var/log/dontWasteTime/worker_err.log
-environment = PATH="%(ENV_HOME)/Envs/dontWasteTime/bin:%(ENV_PATH)s"
+environment = PATH="%(ENV_HOME)s/Envs/dontWasteTime/bin:%(ENV_PATH)s"
