--- a/install/vagrant/resources/supervisor/django.conf
+++ b/install/vagrant/resources/supervisor/django.conf
@@ -1,7 +1,7 @@
 [program:dwt_django]
 user = vagrant
 directory = %(ENV_HOME)s/projects/dontWasteTime/webapp/crawler_app
-command = %(ENV_HOME)s/Envs/dontWasteTime/bin/python manage.py runserver 0.0.0.0:8000
+command = %(ENV_HOME)s/Envs/dontWasteTime/bin/gunicorn --env DJANGO_SETTINGS_MODULE=crawler_app.settings --config=gunicorn.conf.py crawler_app.wsgi
 autostart = true
 autorestart = true
 stdout_logfile = /var/log/dontWasteTime/django_out.log
